--- a/gastronomgöz yapılanlar/filiz_cakir_2025_bitirme/3imzasayfa.tex
+++ b/gastronomgöz yapılanlar/filiz_cakir_2025_bitirme/3imzasayfa.tex
@@ -4,7 +4,7 @@
 
    \vspace{3cm}
 
-    \textbf{\centering{GASTRONOMGÖZ: AKILLI YEMEK TANIMA VE KALORİ HESAPLAMA SİSTEMİ UYGULAMASI}}
+    \textbf{\centering{MOBİL UYGULAMA ENTEGRASYONLU AKILLI BESLENME TAKİP SİSTEMİ}}
 
     \vspace{3cm}
     
