--- a/gastronomgöz yapılanlar/filiz_cakir_2025_bitirme/referans.bib
+++ b/gastronomgöz yapılanlar/filiz_cakir_2025_bitirme/referans.bib
@@ -644,7 +644,7 @@
   doi = {10.3233/978-1-60750-588-4-1043}
 }
 
-@article{hall2022calories,
+@article{hall2018obesity,
   author = {Hall, Kevin D. and Kahan, Scott},
   title = {Maintenance of Lost Weight and Long-Term Management of Obesity},
   journal = {Medical Clinics of North America},
@@ -656,7 +656,7 @@
   doi = {10.1016/j.mcna.2017.08.012}
 }
 
-@article{amoutzo2021portion,
+@article{amoutzo2018portion,
   author = {Amoutzopoulos, Birdem and Steer, Toni and Roberts, Caireen and Cade, Janet E. and Boushey, Carol J. and Baranowski, Tom and Collins, Clare E. and Gibney, Michael J. and Berg, Christina and Pollard, Christina M. and Bradley, David and Steinfeldt, Lois C. and Martin-Calvar, Maria Laura and Zoumas, Beulah},
   title = {Traditional Methods v. New Technologies -- Dilemmas for Dietary Assessment in Large-Scale Nutrition Surveys and Studies: A Report Following an International Panel Discussion at the 9th International Conference on Diet and Activity Methods (ICDAM9), Brisbane, 3 September 2015},
   journal = {Journal of Nutritional Science},
