chore: Kişisel dosyaları ve gereksiz kurulum dokümanlarını kaldır

--- a/gastronomgöz yapılanlar/filiz_cakir_2025_bitirme/16ekler.tex
+++ b/gastronomgöz yapılanlar/filiz_cakir_2025_bitirme/16ekler.tex
@@ -13,6 +13,6 @@ GastronomGöz projesi açık kaynak olarak geliştirilmiş olup, tüm kaynak kod
 Sistemin iOS ve Android platformlarında çalışmasını gösteren demo videoları:
 
 \begin{itemize}
-    \item \textbf{iOS Demo:} \url{https://youtube.com/watch?v=PLACEHOLDER_IOS}
+    \item \textbf{iOS Demo:} \url{https://youtu.be/SEqj2Ytgz2A}
     \item \textbf{Android Demo:} \url{https://youtube.com/watch?v=PLACEHOLDER_ANDROID}
 \end{itemize} 
